# bitbar-twitch

./: Cargo.toml  LICENSE  README.md
assets/: bitbar-twitch.fenhl.net.nginx
assets/www/: auth.html  index.html
src/: data.rs  main.rs  paginated.rs
