[package]
name = "bitbar-twitch"
version = "0.2.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
itertools = "0.10"
serde_json = "1"
thiserror = "1"
url = "2"
xdg = "2"

[dependencies.bitbar]
version = "0.8"
features = ["base64"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.futures]
version = "0.3"

[dependencies.reqwest]
version = "0.11"
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.timespec]
git = "https://github.com/fenhl/rust-timespec"
branch = "main"

[dependencies.twitch_helix]
git = "https://github.com/fenhl/rust-twitch-helix"
branch = "main"
