[package]
name = "bitbar-twitch"
version = "0.2.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2024"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
bitbar = { version = "0.10", features = ["base64"] }
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3" }
itertools = "0.14"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
serde_with = "3.14.0"
thiserror = "2"
timespec = { git = "https://github.com/fenhl/rust-timespec", branch = "main" }
twitch_helix = { git = "https://github.com/fenhl/rust-twitch-helix", branch = "main" }
url = "2"
xdg = "3"
